--- a/APIDatVe/HeThongQuanLyDatVe/Views/QuanLyTaiKhoan/PhanQuyen.cshtml
+++ b/APIDatVe/HeThongQuanLyDatVe/Views/QuanLyTaiKhoan/PhanQuyen.cshtml
@@ -1,92 +1,148 @@
 ﻿
 @{
-    ViewBag.Title = "Quản lý tài khoản";
+    ViewBag.Title = "Phân quyền";
 }
-
-<div class="page-content">
+<div class="page-content" ng-controller="controller">
     <div class="page-header">
         <h1>
-            Phân quyền
+            Cài đặt
+            <small>
+                <i class="ace-icon fa fa-angle-double-right"></i>
+                Phân quyền
+            </small>
         </h1>
     </div>
-    <p>Chọn nút  <i class="ace-icon fa fa-pencil bigger-130"></i> tương ứng với quyền trong danh sách quyền để cập nhật các chức năng được phép thực hiện.</p>
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-xs-12">
             <div class="table-header">
-                Danh sách quyền
+                Phân quyền
+                <div class="pull-right tableTools-container"></div>
             </div>
             <div>
                 <table id="dynamic-table" class="table table-striped table-bordered table-hover">
                     <thead>
                         <tr>
+                            <th class="center">#</th>
                             <th>Mã quyền</th>
                             <th>Tên quyền</th>
-                            <th class="center">Phân quyền</th>
+                            <th class="center">Thao tác</th>
                         </tr>
                     </thead>
-
-                    <tbody>
-                        @for (int i = 1; i < 3; i++)
-                        {
-                            <tr>
-                                <td>
-                                    <span>Mã quyền @i</span>
-                                </td>
-                                <td>
-                                    <span>Tên quyền @i</span>
-                                </td>
-                                <td class="center">
-                                    <div class="action-buttons">
-                                        <a class="green" href="#">
-                                            <i class="ace-icon fa fa-pencil bigger-130"></i>
-                                        </a>
-                                    </div>
-                                </td>
-                            </tr>
-                        }
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <div class="col-md-8">
-            <div class="table-header">
-                Danh sách chức năng
-            </div>
-            <div>
-                <table class="table table-bordered table-striped table-hover">
-                    <thead>
-                        <tr>
-                            <th>Tên chức năng</th>
-                            <th class="center">Quyền Xem</th>
-                            <th class="center">Quyền Thêm</th>
-                            <th class="center">Quyền Sửa</th>
-                            <th class="center">Quyền Xóa</th>
+                    <tbody ng-cloak>
+                        <tr ng-repeat="item in datas">
+                            <td class="center">
+                                <label class="pos-rel">{{$index + 1}}</label>
+                            </td>
+                            <td>
+                                {{item.maquyen}}
+                            </td>
+                            <td>
+                                {{item.tenquyen}}
+                            </td>
+                            <td class="center">
+                                <div class="action-buttons">
+                                    <a class="green" ng-click="getThongTinQuyen(item.maquyen)">
+                                        Cập nhật quyền
+                                    </a>
+                                </div>
+                            </td>
                         </tr>
-                    </thead>
-                    <tbody>
-                        @for (int i = 1; i < 10; i++)
-                        {
-                            <tr>
-                                <td>
-                                    <span>Tên chức năng @i</span>
-                                </td>
-                                <td class="center">
-                                    <input name="form-field-checkbox" type="checkbox" />
-                                </td>
-                                <td class="center">
-                                    <input name="form-field-checkbox" type="checkbox" />
-                                </td>
-                                <td class="center">
-                                    <input name="form-field-checkbox" type="checkbox" />
-                                </td>
-                                <td class="center">
-                                    <input name="form-field-checkbox" type="checkbox" />
-                                </td>
-                            </tr>
-                        }
                     </tbody>
                 </table>
             </div>
         </div>
     </div>
+
+    <div id="modal" class="modal fade" tabindex="-1">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h3 class="smaller lighter blue no-margin">Cập nhật quyền</h3>
+                </div>
+                <div class="modal-body">
+                    <h4 style="margin-top:0">Quyền: <b>{{detail.quyen.tenquyen}}</b></h4>
+                    <div class="row">
+                        <div class="col-md-12 margin-md-bottom">
+                            <h4 class="text-center">Quyền truy cập màn hình</h4>
+                            <hr />
+                            <div class="row">
+                                <div class="col-md-4" ng-repeat="item in detail.quyenManHinhQuanLies">
+                                    <label>
+                                        <input ng-model="item.chon" type="checkbox" value="true" />
+                                        <span>{{item.mota}}</span>
+                                    </label>
+                                </div>
+                            </div>
+                            <hr />
+                        </div>
+                        <div class="col-md-12 margin-md-bottom">
+                            <h4  class="text-center" style="margin:0">Quyền truy cập API</h4>
+                            <hr />
+                            <div class="col-md-4" ng-repeat="item in detail.quyenAPIQuanLies">
+                                <label>
+                                    <input ng-model="item.chon" type="checkbox" value="true" />
+                                    <span>{{item.mota}}</span>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer text-right">
+                    <button class="btn btn-sm btn-success" ng-click="submit()">Lưu</button>
+                    <button class="btn btn-sm btn-default" data-dismiss="modal">Hủy</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+<script>
+    var urlGet = 'http://localhost:56893/api/phanquyen';
+    var urlDetail = 'http://localhost:56893/api/phanquyen/detail';
+    var urlPut = 'http://localhost:56893/api/phanquyen/put';
+    app.controller('controller', ['$scope', '$http', function ($scope, $http) {
+        $scope.datas = [];
+        $scope.detail = {};
+        $scope.getDanhSachQuyen = function () {
+            $http({
+                url: urlGet,
+                method: "GET",
+                params: $scope.filter
+            }).then(function success(response) {
+                $scope.datas = response.data;
+            }, function error(response) {
+                alert("Thực hiện không thành công");
+            })
+        };
+        $scope.getThongTinQuyen = function (_maquyen) {
+            $scope.isAdd = false;
+            $http({
+                url: urlDetail,
+                method: "GET",
+                params: {
+                    _maquyen
+                }
+            }).then(function success(response) {
+                $scope.detail = response.data;
+                $scope.detail.maquyen = _maquyen;
+                console.log($scope.detail)
+                $("#modal").modal();
+            }, function error(response) {
+                alert(response.data.Message);
+            })
+        };
+        $scope.submit = function () {
+            $http({
+                url: urlPut,
+                method: "PUT",
+                data: $scope.detail
+            }).then(function success(response) {
+                $scope.getDanhSachQuyen();
+                $("#modal").modal("hide");
+            }, function error(response) {
+                alert("Thực hiện không thành công");
+            })
+        }
+        $scope.getDanhSachQuyen();
+    }]);
+</script>
